fix(button): fix borders to align sizes with different ui's

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -1,11 +1,11 @@
 .CrossUIButton {
-  @apply cursor-pointer border-solid font-sans flex justify-center;
+  @apply cursor-pointer border-solid border font-sans flex justify-center;
 
   @each $color in $colors {
     &.#{$color} {
       $color-value: map-get($colors-map, $color);
 
-      @apply inline-flex items-center antialiased border-2 border-transparent leading-none text-sm px-4 bg-#{$color-value}-500 text-white font-semibold;
+      @apply inline-flex items-center antialiased border-transparent leading-none text-sm px-4 bg-#{$color-value}-500 text-white font-semibold;
       @apply text-xs px-4;
 
       &.pill,
@@ -47,7 +47,7 @@
       }
 
       &.simple {
-        @apply outline-none bg-#{$color-value}-500;
+        @apply bg-#{$color-value}-500;
 
         &:hover:not(:disabled) {
           @apply bg-#{$color-value}-600;
@@ -59,7 +59,7 @@
       }
 
       &.outline {
-        @apply outline-none bg-transparent text-#{$color-value}-700 font-semibold border border-#{$color-value}-700;
+        @apply bg-transparent text-#{$color-value}-700 font-semibold border border-#{$color-value}-700;
 
         svg {
           @apply text-#{$color-value}-700;
@@ -76,7 +76,8 @@
 
       &.simple, &.outline {
         &:focus {
-          @apply ring ring-gray-200;
+          z-index: 1;
+          @apply outline-none ring ring-gray-200 relative;
         }
       }
     }
